--- a/package.json
+++ b/package.json
@@ -23,8 +23,17 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
-    "express": "^3.21.2"
+    "cookie-parser": "^1.4.1",
+    "express": "^3.21.2",
+    "express-session": "^1.13.0",
+    "guid": "0.0.12",
+    "mysql": "^2.10.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "q": "^1.4.1",
+    "request": "^2.70.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
