--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^3.21.2",
     "express-session": "^1.13.0",
     "guid": "0.0.12",
+    "mongoose": "^4.4.12",
     "mysql": "^2.10.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
